# internal/ginapi/docs/swagger.json
@@ -19,6 +19,63 @@
     "basePath": "/api/v1",
     "paths": {
         "/buildings": {
+            "get": {
+                "description": "Gets all buildings according to passed filter paramters",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "building"
+                ],
+                "summary": "Gets all buildings",
+                "operationId": "getall-buildings",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "city filter",
+                        "name": "city",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "handover year filter",
+                        "name": "handover_year",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "floors count filter",
+                        "name": "floors_count",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/ginapi.BuildingView"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ginapi.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ginapi.Error"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Creates a new building using passed data",
                 "consumes": [
@@ -32,6 +89,17 @@
                 ],
                 "summary": "Creates a new building",
                 "operationId": "create-building",
+                "parameters": [
+                    {
+                        "description": "Create building",
+                        "name": "building",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ginapi.BuildingBody"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created",
@@ -56,6 +124,29 @@
         }
     },
     "definitions": {
+        "ginapi.BuildingBody": {
+            "type": "object",
+            "required": [
+                "city",
+                "floors_count",
+                "handover_year",
+                "name"
+            ],
+            "properties": {
+                "city": {
+                    "type": "string"
+                },
+                "floors_count": {
+                    "type": "integer"
+                },
+                "handover_year": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "ginapi.BuildingView": {
             "type": "object",
             "properties": {
